Add out-of-tree coda headers

--- a/linux4.x/Makefile
+++ b/linux4.x/Makefile
@@ -10,3 +10,5 @@ coda-objs := psdev.o cache.o cnode.o inode.o dir.o file.o upcall.o \
 # If you want debugging output, please uncomment the following line.
 
 # ccflags-y := -DDEBUG -DDEBUG_SMB_MALLOC=1
+
+ccflags-y := -DCODA_FS_OUT_OF_TREE
